--- a/main.css
+++ b/main.css
@@ -2,21 +2,15 @@ body {
   min-height: 100vh;
 }
 
-.main-container {
-  min-height: 100vh;
-}
 div .left-profile {
-  min-height: 100vh;
   background-image: url(./docs/bg-profile.jpg);
-  background-size: 50em;
-  background-position: right;
+  min-height: 100vh;
 }
 
 div .right-projects {
-  min-height: 100vh;
   background-image: url(./docs/bg-projects.jpg);
-  background-size: auto;
-  padding: 0;
+  min-height: 100vh;
+
 }
 
 .contact {
@@ -41,4 +35,27 @@ div .right-projects {
 .icons {
   font-size: 1.5em;
   margin-right: .6em;
+}
+
+.lang-icons {
+  color: white;
+  font-size: 2em;
+}
+
+.languages {
+  background-color: rgb(0, 0, 0.5);
+  padding: 1em;
+}
+
+div .sect {
+  animation: fade .8s linear;
+  color: white;
+  background-color: rgba(36, 36, 36, 0.25);
+  margin: 0 2em 0 2em;
+  padding: 2em 1.5em 2em 1.5em;
+  border-radius: 1em;
+}
+
+.experience-card {
+  background: rgba(36, 36, 36, 0.25);
 }
