--- a/main.css
+++ b/main.css
@@ -59,3 +59,7 @@ div .sect {
 .experience-card {
   background: rgba(36, 36, 36, 0.25);
 }
+
+.project-caption {
+  background: rgba(36, 36, 36, 0.25);
+}
