--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   min-height: 100vh;
 }
 
+
 div .left-profile {
   background-image: url(./docs/bg-profile.jpg);
   min-height: 100vh;
@@ -16,13 +17,26 @@ div .right-projects {
 
 .scrollable {
   margin-top: 8vh;
-  height: 92vh;
+  height: 100vh;
   overflow-y: auto;
 }
 
 .contact {
   border-radius: 20px;
   font-size: .8em;
+}
+
+.hvr-icon-grow {
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+.hvr-icon-grow:hover .hvr-icon, .hvr-icon-grow:focus .hvr-icon, .hvr-icon-grow:active .hvr-icon {
+  -webkit-transform: scale(1.3) translateZ(0);
+  transform: scale(1.3) translateZ(0);
 }
 
 .contact a:link {
